--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,182 @@
 /* Add your CSS to this file */
 body {
     margin: 0;
-    font-size: 16px;
+    font-size: 18px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header {
+    background-color: white;
+    font-size: 18px;
 }
 
 .container {
     margin: 0 auto;
-    max-width: 960px;
     width: 100%;
+    max-width: 960px;
+}
+
+nav {
+ color: #6b7280;
+
+}
+
+nav :hover {
+    color: #5A67D8;
+}
+.container h1{
+    margin: 0;
+    padding: 5px;
+    float: left;
+}
+
+.container a {
+    text-decoration: none;
+    padding: 5px;
+}
+
+.container ul {
+    float: right;
+    text-align: center;
+    list-style-type: none;
+}
+
+.container li {
+    list-style-type: none;
+    display: inline;
+    text-decoration: none;
+}
+
+
+.overview-hero .container{
+    display: flex;
+    background-color:#E2E8F0;
+}
+
+.overview-hero .container img {
+    max-width: 60%;
+    max-height: 60%;
+    padding: 50px;
+    float: left;
+    display: inline;
+}
+
+.overview-hero-text {
+    padding: 45px;
+}
+
+.learn-about h2{
+    font-size: 24px;
+    color: #48BB78;
+}
+
+
+.learn-about .cards{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+    column-gap: 20px;
+} 
+
+.learn-about .card{
+    box-shadow: 5px 5px;
+    border-color: #E2E8F0;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.cards h3{
+    color: #48BB78;
+    font-size: 21px;
+}
+.learn-about .container img {
+    max-width: 60%;
+    max-height: 60%;
+    padding: 50px;
+    float: left;
+    display: inline;
+}
+
+.testing .container{
+    display: flex;
+    align-items: center;
+    background-color:#4A5568;
+    color: white;
+    max-width: 960px ;  
+}
+
+.testing-desciption{
+    float: left;
+    padding: 100px;
+} 
+
+.cta .btn {
+    float: right;
+    background-color:#48BB78;
+    margin: 125px;
+    width: 100px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.stories .container article{
+    display: flex;
+}
+
+.stories {
+    color: #5A67D8;
+}
+
+.stories h2 {
+    font-size: 18px;
+}
+
+.stories h3 {
+    font-size: 18px;
+}
+
+
+.stories .container img{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    float: left;
+    margin: 10px;
+    padding: 20px;
+}
+
+.newsletter {
+    max-width: auto;
+}
+
+.newsletter .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    background-color:#48BB78 ;
+    color: white;
+}
+
+.newsletter .container form{
+    display: flex;
+}
+
+.form-group {
+    padding: 10px;
+}
+
+.newsletter .btn{
+    background-color:#5A67D8 ;
+    padding: 10px;
+}
+
+footer {
+    background-color: #4A5568;
+    color: white;
+    max-width: auto;
+    padding: 5px;
+    margin: auto;
 }
